objects/Programme_Module_Version__c.object
<CustomObject><fields>
        <fullName>Member_Type__c</fullName>
        <label>Member Type</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Optional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specials</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Mod_Ver_Name__c</fullName>
        <description>For data loading</description>
        <formula>Module_Version__r.Master_Link__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mod Ver Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Module_Reference__c</fullName>
        <description>for dataloading</description>
        <formula>Module_Version__r.Module_Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module Reference</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Module_Version__c</fullName>
        <inlineHelpText>To find correct Module Version type the first few character of Module Version title then click magnifying glass for available options</inlineHelpText>
        <label>Module Version</label>
        <referenceTo>Module_Version__c</referenceTo>
        <relationshipLabel>Programme Module Versions</relationshipLabel>
        <relationshipName>Instance_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Prog_Ver_Name__c</fullName>
        <description>For dataloading, to be hidden. Returns Master Version name, ie without suffix</description>
        <formula>Programme_Version__r.Master_Link__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For dataloading, to be hidden. Returns Master Version name, ie without suffix</inlineHelpText>
        <label>Prog Ver Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Programme_Version_Suffix__c</fullName>
        <formula>If (  Programme_Version__r.RecordType.Name = "Master Version", 
    "Master", 
    Programme_Version__r.Version_Suffix__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Programme Version Suffix</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Programme_Version__c</fullName>
        <label>Programme Version</label>
        <referenceTo>Programme_Version__c</referenceTo>
        <relationshipLabel>Programme Module Versions</relationshipLabel>
        <relationshipName>Instance_Members</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Many-to-many object to allow one Module version to be a member of multiple Programme version</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Programme Module Version</label><nameField>
        <displayFormat>PMV-{00000000}</displayFormat>
        <label>Programme Module Version</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Programme Module Versions</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Member_Type__c</columns>
        <columns>Programme_Version__c</columns>
        <columns>Module_Version__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>